--- a/homeStyles.css
+++ b/homeStyles.css
@@ -11,17 +11,17 @@
 
 .main-button {
     margin-top: calc(var(--regSpacing)*2);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: var(--regSpacing);
     background-color: var(--mainGreen);
     border: none;
     border-radius: 3px;
     padding: 10px 5px;
-    text-transform: uppercase;
-    color: var(--white);
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: calc(var(--regSpacing)*2);
+    text-transform: capitalize;
+    font-family: var(--titleFont);
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
-    font-weight: 600;
-    margin-bottom: var(--regSpacing);
+
+
 }
