--- a/mainStyles.css
+++ b/mainStyles.css
@@ -1,10 +1,12 @@
 * {
     margin: 0px;
     padding: 0px;
+    --titleColor: black;
     --mainGreen: #7DC2A5;
     --mainOrange: #F18825;
     --white: #FFFF;
     --regSpacing: 8px;
+    --titleFont: 'Kaisei Decol', serif
 }
 
 :root {
@@ -12,9 +14,29 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+/*-----Titres-----*/
+
 h1 {
-    text-transform: uppercase;
+    text-transform: none;
+    font-family: var(--titleFont);
 }
+
+h2 {
+    text-transform: none;
+    font-family: var(--titleFont);
+    color: var(--titleColor);
+    text-align: left;
+}
+
+h3 {
+    margin-bottom: var(--regSpacing);
+    color: var(--titleColor);
+    text-align: center;
+    font-size: calc(0.2rem + 3vw);
+    font-family: var(--titleFont);
+}
+
+/*-----HEADER-----*/
 
 .header {
     padding: 0 12px;
@@ -42,10 +64,11 @@ h1 {
 .header-title {
     line-height: 50px;
     font-size: 22px;
-    text-transform: uppercase;
-    color: var(--white);
+    color: var(--titleColor);
     padding-left: 50px;
 }
+
+/*-----MENU-----*/
 
 nav ul {
     position: fixed;
@@ -57,8 +80,9 @@ nav li {
     line-height: 50px;
     text-align: center;
     background: var(--mainGreen);
-    color: var(--white);
+    color: var(--titleColor);
     font-size: 1.3em;
+    font-family: var(--titleFont);
 }
 
 .menu-reserver {
@@ -66,6 +90,7 @@ nav li {
     color: inherit;
     font-size: inherit;
     position: absolute;
+    font-family: inherit;
     left: 0;
     right: 0;
     width: clamp(100px, 50%, 200px);
@@ -82,7 +107,7 @@ nav li {
     transition: transform 0.5s;
     position: fixed;
     width: 100%;
-    max-width: 480px;
+    max-width: 675px;
     transform: translateY(-300px);
 }
 
@@ -107,7 +132,7 @@ nav li {
 
 #menu-button::after {
     content: '×';
-    color: var(--mainOrange);
+    color: var(--titleColor);
 }
 
 #menu-button.close {
@@ -119,17 +144,22 @@ nav li {
     content: '≡';
 }
 
+/*-----HERO-----*/
+
 .hero {
     overflow: hidden;
     width: 100vw;
     position: relative;
     z-index: -1;
     padding-top: 50px;
+    height: 32vh;
 }
 
 .hero-img {
     width: 100%;
-    height: 32vh;
+    filter: grayscale(20%);
+    z-index: -1;
+
 }
 
 .hero h2 {
@@ -140,12 +170,13 @@ nav li {
     margin-left: auto;
     margin-right: auto;
     width: clamp(200px, 70%, 400px);
-    font-size: calc(0.2rem + 3vw);
+    font-size: calc(0.2rem + 2.8vw);
     background-color: rgba(255, 255, 255, 0.88);
     padding: 5% 2%;
-    color: var(--mainGreen);
     text-align: center;
-    overflow: hidden;
+    z-index: 1;
+    color: inherit;
+    text-transform: inherit;
 }
 
 .hero-reserver {
@@ -154,17 +185,20 @@ nav li {
     right: 0;
     background-color: var(--mainOrange);
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     padding: 10px 5px;
-    text-transform: uppercase;
-    color: var(--white);
     margin-left: auto;
     margin-right: auto;
     margin-top: 180px;
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
-    font-weight: 600;
+    text-transform: capitalize;
+    font-family: var(--titleFont);
+    cursor: pointer;
+    z-index: 1;
 }
+
+/*-----MAIN CONTENT-----*/
 
 .main-content {
     margin-top: calc(var(--regSpacing)*3);
@@ -172,31 +206,17 @@ nav li {
     margin-right: 12%;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
-h2 {
-    text-transform: uppercase;
-    color: var(--mainGreen);
-    text-align: center;
-    font-size: calc(0.2rem + 4vw);
-}
 
 .main-content p {
-    text-align: center;
+    text-align: left;
     font-size: 0.8em;
 }
 
 .separator {
     margin-top: calc(var(--regSpacing)*1);
     margin-bottom: calc(var(--regSpacing)*1);
-    width: 80%;
-    border-bottom: 2px solid var(--mainOrange);
-}
-
-h3 {
-    margin-bottom: var(--regSpacing);
-    color: var(--mainGreen);
-    text-align: center;
-    font-size: calc(0.2rem + 3vw);
+    width: 20%;
+    border-bottom: 2px solid var(--titleColor);
 }
