--- a/mainStyles.css
+++ b/mainStyles.css
@@ -73,6 +73,7 @@ h3 {
 nav ul {
     position: fixed;
     width: 100%;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
 }
 
 nav li {
@@ -104,7 +105,7 @@ nav li {
 }
 
 #menu {
-    transition: transform 0.5s;
+    transition: transform 0.7s;
     position: fixed;
     width: 100%;
     max-width: 675px;
@@ -113,6 +114,7 @@ nav li {
 
 #menu.show-menu {
     transform: translateY(50px);
+
 }
 
 #menu-button {
