--- a/mainStyles.css
+++ b/mainStyles.css
@@ -3,7 +3,7 @@
     padding: 0px;
     --mainGreen: #7DC2A5;
     --mainOrange: #F18825;
-    --white: #FFFF;
+    --white: #cc1515;
     --regSpacing: 8px;
 }
 
