main tyle test 2

--- a/mainStyles.css
+++ b/mainStyles.css
@@ -6,7 +6,7 @@
     --titleColor: black;
     --mainGreen: #7DC2A5;
     --mainOrange: #F18825;
-    --white: #FFFF;
+    --mainWhite: #FFFF;
     --regSpacing: 8px;
     --titleFont: 'Kaisei Decol', serif
 }
