--- a/homeStyles.css
+++ b/homeStyles.css
@@ -22,6 +22,8 @@
     font-family: var(--titleFont);
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
+}
 
-
+.ouverture {
+    text-align: center;
 }
