Le beau formulaire de Thomas

--- a/ReservationStyles.css
+++ b/ReservationStyles.css
@@ -40,3 +40,33 @@ select{
     height : 32px;
     
 }
+.reservation{
+    margin-left : 30%;
+    margin-right : 30%;
+    margin-top : 16px;
+}
+.main-button{
+
+    display : flex;
+    justify-content : center;
+    
+}
+  #reser{
+   
+ 
+    
+  
+    margin-top: calc(var(--regSpacing)*2);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: var(--regSpacing);
+    background-color: var(--mainGreen);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 10px;
+  
+    text-transform: capitalize;
+    font-family: var(--titleFont);
+    width: clamp(100px, 40%, 250px);
+    font-size: calc(0.1em + 2.7vw);
+  }
