verson1.2 ajout du js

--- a/camStyle.css
+++ b/camStyle.css
@@ -17,6 +17,9 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
+  a {
+    text-decoration: none;
+  }
 
 .hero {
   display: flex;
@@ -37,13 +40,6 @@
     display: flex;
     flex-direction: column;
     align-items:left;
-}
-
-.main-content p {
-  text-align: left;
-  font-size: 0.8em;
-  margin: 0px;;
-  padding-top: 8px;
 }
 
 h1 {
@@ -79,20 +75,11 @@ h2 {
   border-bottom: 2px solid var(--titleColor);
 }
 
-.main-content p {
-    
-    text-align:left;
-    font-size: 0.8em;
-}
-
-
-p {
+#textContactus {
   
-    margin-left:50px;
-    margin-right: 50px;
     text-decoration: none;
     color: black;
-    margin-top: 50px;
+    margin-top: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     
 }
