--- a/carteStyles.css
+++ b/carteStyles.css
@@ -2,63 +2,50 @@
 
     display: flex;
     flex-direction: column;
+    
     align-items: center;
 }
 
-.navMenu {
+h4{
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+}
+.navMenu1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 80%;
+    margin-top: 16px;
+
 }
 
 .main-button {
-    width: 100%;
 
-
-}
-
-.lesMenus div {
-    position: absolute;
-    
-}
-
-.lesMenus {
-    display: flex;
-    flex-direction: column;
-    height: 200px;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: var(--regSpacing);
+    background-color: var(--mainGreen);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 5px;
+    text-transform: capitalize;
+    font-family: var(--titleFont);
+     font-size: calc(0.1em + 2.7vw);
+     width: 80%;
 
 }
 
-.Menu {
-  width: 50%;
-  text-align: center;
- 
+#p1{
+ padding:calc(var(--regSpacing)*3);
 }
 
-.jour{
-    visibility: hidden;
+
+.Carte #p1{
+    text-align: center;
+
 }
 
-.Entrees{
-    visibility: hidden;
+#mEntrees,#mPlats,#mDesserts{
+display: none;
 }
-
-.plats{
-    visibility: hidden;
-}
-/*
-#desserts{
-    visibility: hidden;
-}
-
-*/
-/*
-#mDesserts{
-    background-color: white;
-}
-
-#mPlats{
-    background-color: white;
-}
-*/
