--- a/ReservationStyles.css
+++ b/ReservationStyles.css
@@ -70,3 +70,11 @@ select{
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
   }
+.box{
+    display : flex;
+    justify-content : space-between;
+}
+#erreurdate{
+   visibility: hidden;
+    color : red;
+}
