--- a/camStyle.css
+++ b/camStyle.css
@@ -1,59 +1,3 @@
-* { 
-    box-sizing:border-box;
-    margin:0px;
-    padding:0px;
-    border:0px;
-    --mainGreen: #7DC2A5;
-    --mainOrange: #F18825;
-    --white: white;
-    --titleColor: black;
-    --titleFont: 'Kaisei Decol', serif;
-    --regSpacing: 8px;
-
-    }   
-
-    :root {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-
-.hero {
-  display: flex;
-    overflow: hidden;
-    width: 100%;
-    z-index: -1;
-    padding-top: 50px;
-    height: 40vh;
-}
-
-
-
-.main-content {
-
-    margin-top: calc(var(--regSpacing)*3);
-    margin-left: 2%;
-    margin-right: 2%;
-    display: flex;
-    flex-direction: column;
-    align-items:left;
-}
-
-h1 {
-  text-transform: none;
-  font-family: var(--titleFont);
-}
-
-h2 {
-  text-transform: none;
-  font-family: var(--titleFont);
-  color: var(--titleColor);
-  text-align: left;
-}
-
 .main-content {
   margin-top: calc(var(--regSpacing)*3);
   margin-left: 12%;
@@ -62,26 +6,13 @@ h2 {
   flex-direction: column;
 }
 
-
-.main-content p {
-  text-align: left;
-  font-size: 0.8em;
-}
-
-.separator {
-  margin-top: calc(var(--regSpacing)*1);
-  margin-bottom: calc(var(--regSpacing)*1);
-  width: 20%;
-  border-bottom: 2px solid var(--titleColor);
-}
-
 #textContactus {
-  
-    text-decoration: none;
-    color: black;
-    margin-top: 40px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+
+  text-decoration: none;
+  color: black;
+  margin-top: 40px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 
@@ -99,15 +30,19 @@ body {
   width: 100%;
 }
 
-button {
+#form_button {
   overflow: visible;
 }
 
-button, select {
+#form_button,
+select {
   text-transform: none;
 }
 
-button, input, select, textarea {
+#form_button,
+input,
+select,
+textarea {
   color: #000000;
   font: inherit;
   margin: 0;
@@ -154,38 +89,43 @@ form {
 }
 
 .email {
-	width: 45%;
+  width: 45%;
 }
 
-input[type='text'], [type='email'], select, textarea {
-	background: none;
+input[type='text'],
+[type='email'],
+select,
+textarea {
+  background: none;
   border: none;
-	border-bottom: solid 2px #474544;
-	color: #474544;
-	font-size: 15px;
-	margin: 0em 0 1.875em 0;
-	padding: 0 0 0.875em 0;
+  border-bottom: solid 2px #474544;
+  color: #474544;
+  font-size: 15px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
   text-transform: uppercase;
-	width: 100%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	box-sizing: border-box;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-ms-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
-input[type='text']:focus, [type='email']:focus, textarea:focus {
-	outline: none;
-	padding: 0 0 0.875em 0;
+input[type='text']:focus,
+[type='email']:focus,
+textarea:focus {
+  outline: none;
+  padding: 0 0 0.875em 0;
 }
 
 .message {
-	float: none;
+  float: none;
   width: 50%;
 }
 
@@ -195,8 +135,8 @@ input[type='text']:focus, [type='email']:focus, textarea:focus {
 }
 
 .name {
-	float: left;
-	width: 45%;
+  float: left;
+  width: 45%;
 }
 
 select {
@@ -219,28 +159,28 @@ select::-ms-expand {
 }
 
 textarea {
-	line-height: 150%;
-	height: 100px;
-	resize: none;
+  line-height: 150%;
+  height: 100px;
+  resize: none;
   width: 100%;
 }
 
 ::-webkit-input-placeholder {
-	color: #474544;
+  color: #474544;
 }
 
-:-moz-placeholder { 
-	color: #474544;
-	opacity: 1;
+:-moz-placeholder {
+  color: #474544;
+  opacity: 1;
 }
 
 ::-moz-placeholder {
-	color: #474544;
-	opacity: 1;
+  color: #474544;
+  opacity: 1;
 }
 
 :-ms-input-placeholder {
-	color: #474544;
+  color: #474544;
 }
 
 #main-button {
@@ -260,23 +200,23 @@ textarea {
 
 #form_button {
   margin-top: calc(var(--regSpacing)*2);
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: var(--regSpacing);
-    background-color: var(--mainGreen);
-    border: none;
-    border-radius: 5px;
-    padding: 10px 5px;
-    text-transform: capitalize;
-    font-family: var(--titleFont);
-    width: clamp(100px, 40%, 250px);
-    font-size: calc(0.1em + 2.7vw);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: var(--regSpacing);
+  background-color: var(--mainGreen);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 5px;
+  text-transform: capitalize;
+  font-family: var(--titleFont);
+  width: clamp(100px, 40%, 250px);
+  font-size: calc(0.1em + 2.7vw);
 }
 
 #contact_form {
   display: flex;
   flex-direction: column;
-  margin-top:0px;
+  margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 35px;
   padding-left: 50px;
@@ -295,11 +235,11 @@ textarea {
   h4 {
     font-size: 26px;
   }
-  
+
   .underline {
     width: 68px;
   }
-  
+
   #form_button {
     padding: 15px 25px;
   }
@@ -307,19 +247,20 @@ textarea {
 
 @media screen and (max-width: 420px) {
 
-  
+
   .icon {
     height: 35px;
     width: 35px;
   }
-  
+
   .underline {
     width: 53px;
   }
-  
-  input[type='text'], [type='email'], select, textarea {
+
+  input[type='text'],
+  [type='email'],
+  select,
+  textarea {
     font-size: 0.875em;
   }
 }
-
-
