--- a/mainStyles.css
+++ b/mainStyles.css
@@ -76,6 +76,7 @@ nav ul {
     position: fixed;
     width: 100%;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+    background-color: var(--mainGreen);
 }
 
 nav li {
