--- a/mainStyles.css
+++ b/mainStyles.css
@@ -164,6 +164,8 @@ nav a {
 
     padding-top: 50px;
     height: 32vh;
+
+
 }
 
 .hero-img {
@@ -177,11 +179,13 @@ nav a {
     position: absolute;
     left: 0;
     right: 0;
+
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
     width: clamp(200px, 70%, 400px);
     font-size: calc(0.2rem + 2.8vw);
+
     background-color: rgba(255, 255, 255, 0.88);
     padding: 5% 2%;
     text-align: center;
@@ -203,7 +207,7 @@ nav a {
     padding: 10px 5px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 180px;
+    margin-top: 160px;
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
     text-transform: capitalize;
@@ -233,4 +237,35 @@ p {
     margin-bottom: calc(var(--regSpacing)*1);
     width: 20%;
     border-bottom: 2px solid var(--titleColor);
+}
+
+
+
+/* gestion du Hero en mode desktop : */
+@media screen and (min-width: 675px) {
+
+    .hero h2 {
+
+        font-size: 28px;
+        padding: 20px;
+    }
+
+    .hero-reserver {
+        font-size: 24px;
+        margin-top: 140px;
+    }
+
+    h3 {
+        font-size: calc(0.2rem + 2vw);
+    }
+
+}
+
+/* faire en sorte que sur écran étroit, l'image du Hero ne laisse
+pas de zone blanche : */
+@media screen and (max-width: 380px) {
+    .hero-img {
+        height: 100%;
+        width: auto;
+    }
 }
