--- a/valeursStyles.css
+++ b/valeursStyles.css
@@ -11,26 +11,172 @@
 
 .boiteImageTop {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    margin-top: calc(var(--regSpacing)*2);
+
 
 }
 
-.boiteImageTop img {
-    display: flex;
-    align-items: center;
-    max-width: 90%;
+.boiteImageTop div {
+    width: 45%
 }
+
+
 
 .valeurs-img {
     height: auto;
     width: auto;
     overflow: hidden;
-    margin-top: calc(var(--regSpacing)*2);
-    padding: 8px;
-    display:flex;
+    display: flex;
 }
 
 .valeurs-img img {
     width: 100%
 }
+
+
+.boiteImageMainDesktop {
+    display: none;
+}
+
+@media screen and (min-width: 675px) {
+    .boiteImageMain {
+        display: none;
+
+    }
+
+    .boiteImageMainDesktop {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .valeurs-img {
+        display: flex;
+        justify-content: center;
+        width: 400px;
+        height: calc()
+    }
+
+    .boiteImageMainDesktop img {
+
+        margin: 20px;
+        padding: 5px;
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, .5);
+
+    }
+
+
+
+
+    /* ========CAROUSSEL STARTS HERE==============*/
+
+    .slider-wrapper {
+
+        margin: 1rem;
+
+        position: relative;
+
+        overflow: hidden;
+
+    }
+
+    .slides-container {
+
+        height: calc(100vh - 2rem);
+
+        width: 100%;
+
+        display: flex;
+
+        list-style: none;
+
+        margin: 0;
+
+        padding: 0;
+
+        overflow: scroll;
+
+        scroll-behavior: smooth;
+
+    }
+
+    .slide {
+
+        width: 100%;
+
+        height: 100%;
+
+        flex: 1 0 100%;
+
+    }
+
+    .slide-arrow {
+
+        position: absolute;
+
+        display: flex;
+
+        top: 0;
+
+        bottom: 0;
+
+        margin: auto;
+
+        height: 4rem;
+
+        background-color: white;
+
+        border: none;
+
+        width: 2rem;
+
+        font-size: 3rem;
+
+        padding: 0;
+
+        cursor: pointer;
+
+        opacity: 0.5;
+
+        transition: opacity 100ms;
+
+    }
+
+    .slide-arrow:hover,
+
+    .slide-arrow:focus {
+
+        opacity: 1;
+
+    }
+
+    #slide-arrow-prev {
+
+        left: 0;
+
+        padding-left: 0.25rem;
+
+        border-radius: 0 2rem 2rem 0;
+
+    }
+
+    #slide-arrow-next {
+
+        right: 0;
+
+        padding-left: 0.75rem;
+
+        border-radius: 2rem 0 0 2rem;
+
+    }
+
+
+
+    /* =====CAROUSSEL ENDS HERE */
+
+
+
+}
+
+/* <<< fin du media screen*/
