--- a/carteStyles.css
+++ b/carteStyles.css
@@ -2,7 +2,6 @@
 
     display: flex;
     flex-direction: column;
-
     align-items: center;
 }
 
@@ -13,7 +12,7 @@ h4 {
 }
 
 .navMenu1 {
-    display: flex;
+    display: flex; 
     flex-direction: column;
     justify-content: center;
     width: 80%;
@@ -37,19 +36,77 @@ h4 {
     cursor: pointer;
 
 }
-
+/*
 #p1 {
     padding: calc(var(--regSpacing)*3);
+  */  
 }
-
+.flipOutX #p1 {
+    -webkit-animation-name: flipOutX;
+    animation-name: flipOutX;
+    -webkit-animation-duration: .75s;
+    animation-duration: .75s;
+    -webkit-backface-visibility: visible !important;
+    backface-visibility: visible !important;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    }
+    @-webkit-keyframes flipOutX {
+    0% {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+    }
+    30% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    opacity: 1;
+    }
+    100% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    opacity: 0;
+    }
+    }
+    @keyframes flipOutX {
+    0% {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+    }
+    30% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    opacity: 1;
+    }
+    100% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    opacity: 0;
+    }
+    } 
 
 .Carte #p1 {
     text-align: center;
 
 }
-
+.description{
+    width: 50px;
+}
 #mEntrees,
 #mPlats,
 #mDesserts {
     display: none;
-}
+} 
+
+@media screen and (min-width: 675px) {
+    .navMenu1{
+        width: 50%;
+    }
+    .description{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+
+  }
