Revert "Popup legendaire avec flou artistique et animation fadein + test amel…"

--- a/ReservationStyles.css
+++ b/ReservationStyles.css
@@ -1,8 +1,6 @@
-.gris{
-    filter : grayscale(0);
-    background-color: white;
+*{
+    --mainGreen: #7DC2A5
 }
-
 form{
     display : flex;
     flex-direction : column;
@@ -10,7 +8,7 @@ form{
     margin-left : 30%;
     margin-right : 30%;
     padding : 8px;
-    
+
 }
 .formulaire{
     display : flex ;
@@ -55,7 +53,7 @@ select{
 }
   #reser{
    
-    text-transform: initial;
+ 
     
   
     margin-top: calc(var(--regSpacing)*2);
@@ -67,7 +65,7 @@ select{
     border-radius: 5px;
     padding: 10px 10px;
   
-
+    text-transform: capitalize;
     font-family: var(--titleFont);
     width: clamp(100px, 40%, 250px);
     font-size: calc(0.1em + 2.7vw);
@@ -79,47 +77,4 @@ select{
 #erreurdate{
    visibility: hidden;
     color : red;
-}
-#erreurtel{
-    margin-top : 8px;
-    visibility: hidden;
-     color : red;
- }
-
-
-.reca{
-    
-    height:320px;
-    width :400px;
-    top : 50%;
-    left : 50%;
-    position: fixed;
-    margin-top: -160px; 
-    margin-left: -200px;
-    
-    border: 2px solid black;
-    z-index: -10;
-    background-color: white;
-    padding : 16px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-   
-}
-@keyframes fadeIn{
-    0% {opacity : 0;}
-    100%{opacity:100}
-}
-
-#petittitre{
-    font-size : 20px;
-
-}
-.boutons{
- display : flex
- 
-}
-.reca > div{
-    margin-top : 8px;
-}
-.boutons > #reser{
-   font-size: 20px;
 }
