--- a/camStyle.css
+++ b/camStyle.css
@@ -221,12 +221,12 @@ textarea:focus {
 .popup {
 
   margin : 6rem auto;
-  padding : 2rem;
+  padding :2rem;
   background: #fff;
   border-radius :5px;
   z-index:999;
   width: 50%;
-  height: 200px;
+  height: 100px;
   position: relative;
   transition: all 0.4s ease-in-out;
 
@@ -243,6 +243,10 @@ textarea:focus {
   transition :0.3s ease;
   color:black
 
+}
+
+h6 {
+  margin-bottom: 20px;
 }
 
 /*---------RESPONSIVE 675px-----------*/
