--- a/smallFooter.css
+++ b/smallFooter.css
@@ -14,23 +14,28 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
 
 .functions-icon {
     display: flex;
     justify-content: space-between;
     margin-top: calc(var(--regSpacing)*2);
+    padding-bottom: 10px;
 }
 
 .functions-icon img {
     height: 40px;
     margin: 8px;
+
 }
 
 .social-icon {
     display: flex;
     justify-content: space-between;
     margin-top: calc(var(--regSpacing)*2);
+    padding-bottom: 10px;
 }
 
 .social-icon img {
@@ -42,6 +47,13 @@ footer p {
     color: rgb(0, 0, 0);
     text-align: center;
     font-size: 0.6em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+
+
+
 }
 
 
@@ -54,6 +66,7 @@ footer p {
 
     .footer-content {
         justify-content: space-between;
+        align-items: center;
 
     }
 
@@ -68,10 +81,10 @@ footer p {
     }
 
     footer p {
-
+        margin-top: 10px;
         font-weight: bold;
-
-
+        font-size: small;
+        position: initial;
     }
 
 }
